# untitled-logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Logger.hpp  Timestamper.hpp
src/: Logger.cpp  Timestamper.cpp
